feat: Criando novos recursos para controle de eventos
